--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   appinio_video_player: ^1.3.0
   video_player: ^2.6.0
   youtube_player_flutter: ^8.1.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  provider: ^6.1.2
+  image_picker: ^0.8.4+5
+  connectivity: ^3.0.6
+  sqflite: ^2.0.0
+  path_provider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
